<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
<android.support.design.widget.CoordinatorLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <include layout="@layout/toolbar_multiple"/>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:layout_marginTop="@dimen/padding_left_10"
            android:layout_marginLeft="0dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="3
"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:paddingBottom="@dimen/padding_left_10"
                android:paddingLeft="@dimen/padding_left_10"
                android:paddingRight="@dimen/padding_right_15"
                android:paddingTop="@dimen/padding_left_10"
                android:text="@string/title_color_setting"
                android:textSize="20sp"
                android:textColor="#000"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:gravity="center_vertical|right"
                android:paddingTop="@dimen/padding_left_10"
                android:paddingLeft="@dimen/padding_left_10"
                android:paddingBottom="@dimen/padding_left_10"
                android:paddingRight="@dimen/padding_right_15"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/img_color_show"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/ic_color"/>
                <ImageView
                    android:id="@+id/img_next_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_next"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:layout_marginTop="@dimen/padding_left_10"
            android:layout_marginLeft="0dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:paddingBottom="@dimen/padding_left_10"
                android:paddingLeft="@dimen/padding_left_10"
                android:paddingRight="@dimen/padding_right_15"
                android:paddingTop="@dimen/padding_left_10"
                android:text="@string/title_sound_setting"
                android:textSize="20sp"
                android:textColor="#000"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:gravity="center_vertical|right"
                android:paddingTop="@dimen/padding_left_10"
                android:paddingLeft="@dimen/padding_left_10"
                android:paddingBottom="@dimen/padding_left_10"
                android:paddingRight="@dimen/padding_right_15"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_sound_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="gat di giot nuoc mat"/>
                <ImageView
                    android:id="@+id/img_next_sound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_next"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:layout_marginTop="@dimen/padding_left_10"
            android:layout_marginLeft="0dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:paddingBottom="@dimen/padding_left_10"
                android:paddingLeft="@dimen/padding_left_10"
                android:paddingRight="@dimen/padding_right_15"
                android:paddingTop="@dimen/padding_left_10"
                android:text="@string/title_date_setting"
                android:textSize="20sp"
                android:textColor="#000"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:gravity="center_vertical|right"
                android:paddingTop="@dimen/padding_left_10"
                android:paddingLeft="@dimen/padding_left_10"
                android:paddingBottom="@dimen/padding_left_10"
                android:paddingRight="@dimen/padding_right_15"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_date_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="13th August, 2019"/>
                <ImageView
                    android:id="@+id/img_next_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_next"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:layout_marginTop="@dimen/padding_left_10"
            android:layout_marginLeft="0dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:paddingBottom="@dimen/padding_left_10"
                android:paddingLeft="@dimen/padding_left_10"
                android:paddingRight="@dimen/padding_right_15"
                android:paddingTop="@dimen/padding_left_10"
                android:text="@string/title_time_setting"
                android:textSize="20sp"
                android:textColor="#000"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:gravity="center_vertical|right"
                android:paddingTop="@dimen/padding_left_10"
                android:paddingLeft="@dimen/padding_left_10"
                android:paddingBottom="@dimen/padding_left_10"
                android:paddingRight="@dimen/padding_right_15"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_time_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="03:00 am"/>
                <ImageView
                    android:id="@+id/img_next_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_next"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:layout_marginTop="@dimen/padding_left_10"
            android:layout_marginLeft="0dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:paddingBottom="@dimen/padding_left_10"
                android:paddingLeft="@dimen/padding_left_10"
                android:paddingRight="@dimen/padding_right_15"
                android:paddingTop="@dimen/padding_left_10"
                android:text="@string/title_repeat_setting"
                android:textSize="20sp"
                android:textColor="#000"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:gravity="center_vertical|right"
                android:paddingTop="@dimen/padding_left_10"
                android:paddingLeft="@dimen/padding_left_10"
                android:paddingBottom="@dimen/padding_left_10"
                android:paddingRight="@dimen/padding_right_15"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_repeat_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Default"
                    android:textSize="15dp"/>
                <ImageView
                    android:id="@+id/img_next_repeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_next"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>

</layout>